--- a/book_club/templates/book_club/books_by_category.html
+++ b/book_club/templates/book_club/books_by_category.html
@@ -38,7 +38,7 @@
           </a>
 
           {% if can_add_book %}
-            <a href="{% url 'book_club:add_new_book' %}" class="btn btn-lg btn-outline-primary">
+            <a href="{% url 'book_club:book_search' %}" class="btn btn-success">
               ➕ Add New Book
             </a>
           {% endif %}
