--- a/book_club/templates/book_club/book.html
+++ b/book_club/templates/book_club/book.html
@@ -1,7 +1,7 @@
 {% extends 'household_main/base.html' %}
 
 {% block page_header %}
-  <h1 class="mb-4">{{ book.name }}</h1>
+
 {% endblock page_header %}
 
 {% block content %}
@@ -9,12 +9,16 @@
     <div class="row mb-4">
       <div class="col-md-3 text-center">
         {% if metadata.thumbnail_url %}
-          <img src="{{ metadata.thumbnail_url }}" alt="{{ metadata.title }}" class="img-fluid rounded shadow-sm">
+          <img src="{{ metadata.thumbnail_url }}" alt="{{ book.title }}" class="img-fluid rounded shadow-sm">
         {% endif %}
       </div>
       <div class="col-md-9">
-        <h3>{{ metadata.title }}</h3>
-        <p><small class="text-muted">Category: {{ category }}</small></p>
+        <h3>{{ book.title }}</h3>
+        {% if category %}
+            <p>Category: {{ category.name }}</p>
+        {% else %}
+            <p>Category: Uncategorized</p>
+        {% endif %}
         <p><small class="text-muted">Series: {{ series }}</small></p>
         <p class="text-muted mb-1">by {{ metadata.authors|join:", " }}</p>
         {% if metadata.description %}
@@ -36,6 +40,12 @@
   <a href="{% url 'book_club:new_book_entry' book.id %}" class="btn btn-success btn-sm">
     ➕ Add New Entry
   </a>
+
+    {% if user.is_authenticated and is_privileged %}
+      <a href="{% url 'book_club:book_search_with_id' book.id %}" class="btn btn-warning btn-sm">
+        📝 Edit Metadata
+      </a>
+    {% endif %}
 
   {% if not tracker %}
     <form action="{% url 'book_club:toggle_want_to_read' book.id %}" method="post" class="d-inline">
